<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Restaurants Billing Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    //for xml file
    <string name="topping">Topping</string>
    <string name="orderSummary">Order Summary</string>
    <string name="price">$0</string>
    <string name="editname">Name</string>
    <string name="chatni">Chatni</string>
    <string name="shew">Shew</string>
    <string name="dahi">Dahi</string>
    <string name="quantity">Quantity</string>

    //for java file
    <string name="name">Name:  <xliff:g id="name" example="any"> %s </xliff:g>  </string>
    <string name="chatni_checked">Is chatni Order?  <xliff:g id="chatni" example="yes"> %b </xliff:g>  </string>
    <string name="shew_checked">Is Shew Order?  <xliff:g id="shew" example="yes"> %b </xliff:g>  </string>
    <string name="dhani_checked">Is Dhani Order?  <xliff:g id="dhani" example="yes"> %b </xliff:g>  </string>
    <string name="samosa_quantity">Samosa Quantity:  <xliff:g id="quantity" example="10"> %d </xliff:g>  </string>
    <string name="kachori_quantity">Kachori Quantity:  <xliff:g id="kquantity" example="12"> %d </xliff:g>  </string>
    <string name="total_price">Total: $  <xliff:g id="totalprice" example="$50"> %s </xliff:g>  </string>
    <string name="thank_you">Thank You!</string>

</resources>