<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="22dp"
            android:hint="@string/editname"
            android:inputType="textCapWords"/>

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="10dp"
            android:text="@string/topping"
            style="@style/header_attribute"/>

        <CheckBox
            android:id="@+id/chatni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:text="@string/chatni"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shew"
                android:layout_marginLeft="10dp"
                android:paddingLeft="10dp"
                android:id="@+id/shew"/>

        <CheckBox
            android:id="@+id/dahi_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dahi"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"/>

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="10dp"
            android:text="@string/quantity"
            style="@style/header_attribute"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/samosa"
                android:layout_width="200dp"
                android:layout_height="150dp" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:src="@drawable/kachori"
                android:paddingLeft="10dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:onClick="increment"
                android:text="+" />

            <Button
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:onClick="kdecrement"
                android:text="-" />

            <TextView
                android:id="@+id/kachori_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:onClick="kincrement"
                android:text="+" />

        </LinearLayout>

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="10dp"
            android:text="@string/orderSummary"
            style="@style/header_attribute"/>

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="@string/price"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="10dp"
            android:onClick="submitOrder"
            android:text="Order" />
    </LinearLayout>
</ScrollView>